--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="ligh">
 
 <head>
     <meta charset="UTF-8">
@@ -69,17 +69,17 @@
                     </ul>
                 </div>
                 <div class="">
-                    <a class="btn btn-error">Login</a>
+                    <a class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Login</a>
                 </div>
             </div>
         </nav>
         <!-- SLider or carousel -->
-        <div class="carousel w-10/12 mx-5 lg:mx-0 lg:w-full">
+        <div class="carousel w-10/12 mx-5 lg:mx-0 lg:w-full banner-bg">
             <!-- slide 1 -->
             <div id="slide1" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row items-center p-2 lg:p-24 lg:gap-5">
-                    <div class="space-y-4 lg:space-y-7 lg:flex-1">
-                        <h1 class="text-3xl lg:text-6xl">Ride-on R15 V4 with Smile</h1>
+                    <div class="space-y-3 lg:space-y-7 lg:flex-1">
+                        <h1 class="text-xl font-medium lg:text-6xl">Ride-on R15 V4 with Smile</h1>
                         <p class="text-xs">
                             Amet minim mollit non deserunt ullamco
                             est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
@@ -160,7 +160,62 @@
     <!-- Header End here -->
     <!-- Main start here -->
     <main class="w-4/5 container mx-auto">
-
+        <section class="mb-16">
+            <div class="text-center space-y-3 mb-12">
+                <h1 class="text-2xl lg:text-5xl font-semibold">Fetured Bikes In This Year</h1>
+                <p class="text-base font-semibold text-[#10c6f4]">Best bike collection</p>
+            </div>
+            <div class="grid grid-cols-1 gap-12 justify-items-center  lg:grid-cols-3 md:gap-28">
+                <img src="./images/slider/bike1.png" alt="">
+                <img src="./images/slider/bike2.png" alt="">
+                <img src="./images/slider/bike3.png" alt="">
+            </div>
+        </section>
+        <!-- Card section -->
+        <section class="mb-10">
+            <h1 class="text-2xl lg:text-5xl font-semibold text-center">Latest News</h1>
+            <div class="grid grid-cols-1  lg:grid-cols-3 mt-12">
+               <!-- card 1 -->
+               <div class="card lg:w-96 bg-base-100 shadow-xl">
+                <figure><img class="pt-3 w-full lg:max-w-[100%]" src="./images/others/latest1.png" alt="Shoes" /></figure>
+                <div class="card-body pl-0">
+                  <h2 class="card-title text-white">Ducati XDIAVEL S-73</h2>
+                  <p class="py-3 ">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
+                  </p>
+                  <div class="card-actions justify-start">
+                    <button class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Read More</button>
+                  </div>
+                </div>
+              </div>
+              <!-- card 2 -->
+              <div class="card lg:w-96 bg-base-100 shadow-xl">
+                <figure><img class="pt-3 w-full lg:max-w-[100%]" src="./images/others/latest2.png" alt="Shoes" /></figure>
+                <div class="card-body pl-0">
+                  <h2 class="card-title text-white">Ducati XDIAVEL S-73</h2>
+                  <p class="py-3 ">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
+                  </p>
+                  <div class="card-actions justify-start">
+                    <button class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Read More</button>
+                  </div>
+                </div>
+              </div>
+              <!-- card 3 -->
+              <div class="card lg:bg-base-100 shadow-xl">
+                <figure><img class="pt-3 w-full lg:max-w-[100%]" src="./images/others/latest3.png" alt="Shoes" /></figure>
+                <div class="card-body pl-0">
+                  <h2 class="card-title text-white">Ducati XDIAVEL S-73</h2>
+                  <p class="py-3 ">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
+                  </p>
+                  <div class="card-actions justify-start">
+                    <button class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Read More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </section>
     </main>
     <!-- Main end here -->
     <!-- Footer start here -->
