questions section added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                     </ul>
                 </div>
                 <div class="">
-                    <a class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Login</a>
+                    <a
+                        class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Login</a>
                 </div>
             </div>
         </nav>
@@ -90,7 +91,8 @@
                         <img src="./images/slider/bike4.png" alt="">
                     </div>
                 </div>
-                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[60%] lg:top-1/2">
+                <div
+                    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[60%] lg:top-1/2">
                     <a href="#slide4" class="btn btn-circle">❮</a>
                     <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
@@ -110,7 +112,8 @@
                         <img src="./images/slider/bike2.png" alt="">
                     </div>
                 </div>
-                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[60%] lg:top-1/2">
+                <div
+                    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[60%] lg:top-1/2">
                     <a href="#slide1" class="btn btn-circle">❮</a>
                     <a href="#slide3" class="btn btn-circle">❯</a>
                 </div>
@@ -130,7 +133,8 @@
                         <img src="./images/slider/bike3.png" alt="">
                     </div>
                 </div>
-                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[60%] lg:top-1/2">
+                <div
+                    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[60%] lg:top-1/2">
                     <a href="#slide2" class="btn btn-circle">❮</a>
                     <a href="#slide4" class="btn btn-circle">❯</a>
                 </div>
@@ -150,7 +154,8 @@
                         <img src="./images/slider/bike1.png" alt="">
                     </div>
                 </div>
-                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[60%] lg:top-1/2">
+                <div
+                    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[60%] lg:top-1/2">
                     <a href="#slide3" class="btn btn-circle">❮</a>
                     <a href="#slide1" class="btn btn-circle">❯</a>
                 </div>
@@ -159,10 +164,10 @@
     </header>
     <!-- Header End here -->
     <!-- Main start here -->
-    <main class="w-4/5 container mx-auto">
+    <main class="w-[90%] lg:w-4/5 container mx-auto">
         <section class="mb-16">
             <div class="text-center space-y-3 mb-12">
-                <h1 class="text-2xl lg:text-5xl font-semibold">Fetured Bikes In This Year</h1>
+                <h1 class="text-2xl lg:text-5xl font-semibold text-white">Fetured Bikes In This Year</h1>
                 <p class="text-base font-semibold text-[#10c6f4]">Best bike collection</p>
             </div>
             <div class="grid grid-cols-1 gap-12 justify-items-center  lg:grid-cols-3 md:gap-28">
@@ -172,48 +177,212 @@
             </div>
         </section>
         <!-- Card section -->
-        <section class="mb-10">
-            <h1 class="text-2xl lg:text-5xl font-semibold text-center">Latest News</h1>
+        <section>
+            <h1 class="text-2xl lg:text-5xl font-semibold text-center text-white">Latest News</h1>
             <div class="grid grid-cols-1  lg:grid-cols-3 mt-12">
-               <!-- card 1 -->
-               <div class="card lg:w-96 bg-base-100 shadow-xl">
-                <figure><img class="pt-3 w-full lg:max-w-[100%]" src="./images/others/latest1.png" alt="Shoes" /></figure>
-                <div class="card-body pl-0">
-                  <h2 class="card-title text-white">Ducati XDIAVEL S-73</h2>
-                  <p class="py-3 ">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
-                  </p>
-                  <div class="card-actions justify-start">
-                    <button class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Read More</button>
-                  </div>
+                <!-- card 1 -->
+                <div class="card lg:w-96 bg-base-100 shadow-xl">
+                    <figure><img class="pt-3 w-full lg:max-w-[100%]" src="./images/others/latest1.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body pl-0">
+                        <h2 class="card-title text-white">Ducati XDIAVEL S-73</h2>
+                        <p class="py-3 ">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.
+                        </p>
+                        <div class="card-actions justify-start">
+                            <button
+                                class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Read
+                                More</button>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <!-- card 2 -->
-              <div class="card lg:w-96 bg-base-100 shadow-xl">
-                <figure><img class="pt-3 w-full lg:max-w-[100%]" src="./images/others/latest2.png" alt="Shoes" /></figure>
-                <div class="card-body pl-0">
-                  <h2 class="card-title text-white">Ducati XDIAVEL S-73</h2>
-                  <p class="py-3 ">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
-                  </p>
-                  <div class="card-actions justify-start">
-                    <button class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Read More</button>
-                  </div>
+                <!-- card 2 -->
+                <div class="card lg:w-96 bg-base-100 shadow-xl">
+                    <figure><img class="pt-3 w-full lg:max-w-[100%]" src="./images/others/latest2.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body pl-0">
+                        <h2 class="card-title text-white">Ducati XDIAVEL S-73</h2>
+                        <p class="py-3 ">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.
+                        </p>
+                        <div class="card-actions justify-start">
+                            <button
+                                class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Read
+                                More</button>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <!-- card 3 -->
-              <div class="card lg:bg-base-100 shadow-xl">
-                <figure><img class="pt-3 w-full lg:max-w-[100%]" src="./images/others/latest3.png" alt="Shoes" /></figure>
-                <div class="card-body pl-0">
-                  <h2 class="card-title text-white">Ducati XDIAVEL S-73</h2>
-                  <p class="py-3 ">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
-                  </p>
-                  <div class="card-actions justify-start">
-                    <button class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Read More</button>
-                  </div>
+                <!-- card 3 -->
+                <div class="card lg:w-96 bg-base-100 shadow-xl">
+                    <figure><img class="pt-3 w-full lg:max-w-[100%]" src="./images/others/latest3.png" alt="img" />
+                    </figure>
+                    <div class="card-body pl-0">
+                        <h2 class="card-title text-white">Ducati XDIAVEL S-73</h2>
+                        <p class="py-3 ">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.
+                        </p>
+                        <div class="card-actions justify-start">
+                            <button
+                                class="py-2 px-5 rounded-md font-medium hover:text-white hover:bg-transparent border-2 border-[#10c6f4] bg-[#10c6f4] text-black">Read
+                                More</button>
+                        </div>
+                    </div>
                 </div>
-              </div>
+            </div>
+        </section>
+        <!-- Review -->
+        <section class="mt-20">
+            <h1 class="mb-12 text-2xl lg:text-5xl font-semibold text-center text-white">Happy <span
+                    class="text-[#10c6f4]">Clients says</span></h1>
+            <!-- Review all -->
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-10">
+                <!-- review 1 -->
+                <div class="card bg-base-100 shadow-xl border border-[#10c6f4] py-10 lg:px-7">
+                    <div class="avatar flex justify-center">
+                        <div class="w-24 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                            <img src="./images/others/rafizul.jpg" />
+                        </div>
+                    </div>
+                    <div class="card-body items-center text-center space-y-2">
+                        <p class="font-l">
+                            Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.
+                        </p>
+                        <div class="rating space-x-2">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h2 class="text-2xl card-title text-[#10c6f4]">Rafizul Islam</h2>
+                        <h4 class="text-lg text-white font-medium">Student</h4>
+                    </div>
+                </div>
+                <!-- review 2 -->
+                <div class="card bg-base-100 shadow-xl border border-[#10c6f4] py-10 lg:px-7">
+                    <div class="avatar flex justify-center">
+                        <div class="w-24 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                            <img src="./images/others/user-1.png" />
+                        </div>
+                    </div>
+                    <div class="card-body items-center text-center space-y-2">
+                        <p class="font-l">
+                            Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.
+                        </p>
+                        <div class="rating space-x-2">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h2 class="text-2xl card-title text-[#10c6f4]">Regina Miles</h2>
+                        <h4 class="text-lg text-white font-medium">Banker</h4>
+                    </div>
+                </div>
+                <!-- review 3 -->
+                <div class="card bg-base-100 shadow-xl border border-[#10c6f4] py-10 lg:px-7">
+                    <div class="avatar flex justify-center">
+                        <div class="w-24 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
+                            <img src="./images/others/user-2.png" />
+                        </div>
+                    </div>
+                    <div class="card-body items-center text-center space-y-2">
+                        <p class="font-l">
+                            Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.
+                        </p>
+                        <div class="rating space-x-2">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h2 class="text-2xl card-title text-[#10c6f4]">Regina Miles</h2>
+                        <h4 class="text-lg text-white font-medium">Banker</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Questions -->
+        <section class="mt-28">
+            <h1 class="mb-12 text-2xl lg:text-5xl font-semibold text-center text-[#10c6f4]">Frequently <span
+                    class="text-white">Asked Questions</span>
+            </h1>
+            <!--  -->
+            <div class="hero mt-14 mb-32">
+                <div class="flex items-center flex-col gap-24 lg:flex-row">
+                    <img class="w-full" src="./images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
+                    <div class="space-y-4">
+                        <div class="collapse collapse-arrow border border-[#0369a1]">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-xl font-medium text-slate-200">
+                                What are the most important things I should
+                                know about riding a bike?
+                            </div>
+                            <div class="collapse-content">
+                                <p>
+                                    Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                                    and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                                    This will help you be a more focused and legally compliant bike rider.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border border-[#0369a1]">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium text-slate-200">
+                                My bike has been in storage is it safe to ride?
+                            </div>
+                            <div class="collapse-content">
+                                <p>
+                                    Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                                    and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                                    This will help you be a more focused and legally compliant bike rider.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border border-[#0369a1]">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium text-slate-200">
+                                What rules should I follow when riding my bike?
+                            </div>
+                            <div class="collapse-content">
+                                <p>
+                                    Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                                    and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                                    This will help you be a more focused and legally compliant bike rider.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border border-[#0369a1]">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium text-slate-200">
+                                How can I tell if my helmet is old and I need a
+                                new one?
+                            </div>
+                            <div class="collapse-content">
+                                <p>
+                                    Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                                    and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                                    This will help you be a more focused and legally compliant bike rider.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
