--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div
-                    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[45%] lg:top-1/2">
+                    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-[65%] lg:top-1/2">
                     <a href="#slide4" class="btn btn-circle">❮</a>
                     <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
@@ -396,7 +396,7 @@
                     <a href="">Download Now</a>
                     <a href="">License</a>
                 </div>
-                <div class="flex flex-col md:flex-row gap-2 md:gap-6 text-slate-300">
+                <div class="flex flex-col md:flex-row gap-2 md:gap-6 text-slate-300 underline">
                     <a href="">About</a>
                     <a href="">Features</a>
                     <a href="">Pricing</a>
