--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="ligh">
+<html lang="en" data-theme="">
 
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
 
 <body>
     <!-- Header start here -->
-    <header class="w[90%] lg:w-4/5 container mx-auto">
+    <header class="lg:w-4/5 container mx-auto">
         <!-- Navber -->
         <nav class="mt-4">
             <div class="navbar bg-base-100">
@@ -75,7 +75,7 @@
             </div>
         </nav>
         <!-- SLider or carousel -->
-        <div class="carousel w-[100%] mx-5 lg:mx-0 lg:w-full banner-bg">
+        <div class="carousel w-[100%] lg:mx-0 lg:w-full banner-bg">
             <!-- slide 1 -->
             <div id="slide1" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row items-center p-2  lg:p-24 lg:gap-5">
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div
-                    class="absolute flex justify-between transform -translate-y-1/2 left-0 right-0 md:left-5 md:right-5 top-[65%] lg:top-1/2">
+                    class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 md:left-5 md:right-5 top-[65%] lg:top-1/2">
                     <a href="#slide4" class="btn btn-circle">❮</a>
                     <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
@@ -114,7 +114,7 @@
                 </div>
                 <div
                     class="absolute flex justify-between transform -translate-y-1/2 left-0 right-0 md:left-5 md:right-5 top-[65%] lg:top-1/2">
-                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❮</a>
                     <a href="#slide3" class="btn btn-circle">❯</a>
                 </div>
             </div>
