--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <!-- slide 2 -->
             <div id="slide2" class="carousel-item relative w-full">
-                <div class="flex flex-col lg:flex-row items-center  lg:p-24 lg:gap-5">
+                <div class="flex flex-col lg:flex-row items-center p-5 lg:p-24 lg:gap-5">
                     <div class="space-y-3 lg:space-y-7 lg:flex-1">
                         <h1 class="text-3xl text-white font-medium lg:text-6xl">Ride On <span class="text-[#10c6f4]">R15 V4</span> with Smile</h1>
                         <p class="text-base">
@@ -120,7 +120,7 @@
             </div>
              <!-- slide 3 -->
              <div id="slide3" class="carousel-item relative w-full">
-                <div class="flex flex-col lg:flex-row items-center  lg:p-24 lg:gap-5">
+                <div class="flex flex-col lg:flex-row items-center p-5 lg:p-24 lg:gap-5">
                     <div class="space-y-3 lg:space-y-7 lg:flex-1">
                         <h1 class="text-3xl text-white font-medium lg:text-6xl">Ride On <span class="text-[#10c6f4]">R15 V4</span> with Smile</h1>
                         <p class="text-base">
@@ -141,7 +141,7 @@
             </div>
              <!-- slide 4 -->
              <div id="slide4" class="carousel-item relative w-full">
-                <div class="flex flex-col lg:flex-row items-center  lg:p-24 lg:gap-5">
+                <div class="flex flex-col lg:flex-row items-center p-5 lg:p-24 lg:gap-5">
                     <div class="space-y-3 lg:space-y-7 lg:flex-1">
                         <h1 class="text-3xl text-white font-medium lg:text-6xl">Ride On <span class="text-[#10c6f4]">R15 V4</span> with Smile</h1>
                         <p class="text-base">
